垃圾回收结束